AC_PREREQ(2.57)
AC_INIT([nemo-share],[2.4.0])
AC_CONFIG_SRCDIR([src/nemo-share.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE([foreign 1.9 -Wall])


AC_PROG_INTLTOOL([0.29])

NEMO_REQUIRED=1.0.0
EEL_REQUIRED=2.10.0
GLIB_REQUIRED=2.4.0

DATADIRNAME=share

AC_PROG_CC
AC_PROG_LIBTOOL

dnl ========================================================
dnl PKG_CONFIG and required versions
dnl ========================================================
dnl Check for pkgconfig first
AC_CHECK_PROG(HAVE_PKGCONFIG, pkg-config, yes, no)

dnl Give error and exit if we don't have pkgconfig
if test "x$HAVE_PKGCONFIG" = "xno"; then
  AC_MSG_ERROR(you need to have pkgconfig installed !)
fi

PKG_CHECK_MODULES(NEMO, libnemo-extension >= $NEMO_REQUIRED)
PKG_CHECK_MODULES(GLIB, glib-2.0 >= $GLIB_REQUIRED)

AC_SUBST(NEMO_CFLAGS)
AC_SUBST(NEMO_LIBS)

AC_SUBST(GLIB_CFLAGS)
AC_SUBST(GLIB_LIBS)

dnl ========================================================
dnl Get nemo extensionsdir
dnl ========================================================

NEMO_EXTENSION_DIR=`$PKG_CONFIG --variable=extensiondir libnemo-extension`
AC_SUBST(NEMO_EXTENSION_DIR)

dnl ========================================================
dnl Set INTERFACES_DIR 
dnl ========================================================

if test "x${prefix}" = "xNONE"; then
  AC_DEFINE_UNQUOTED(INTERFACES_DIR, "${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/interfaces", [path where glade files will be installed])
  interfacesdir="${ac_default_prefix}/${DATADIRNAME}/${PACKAGE}/interfaces"
else
  AC_DEFINE_UNQUOTED(INTERFACES_DIR, "${prefix}/${DATADIRNAME}/${PACKAGE}/interfaces", [path where glade files will be installed])
  interfacesdir="${prefix}/${DATADIRNAME}/${PACKAGE}/interfaces"
fi

AC_SUBST(interfacesdir)

dnl ========================================================
dnl Transtlations
dnl ========================================================

ALL_LINGUAS="ar as ast bn_IN ca ca@valencia cs da de el en_GB eo es et de dz eu fi fr gl gu he hu id it kn ko lt ml mr nb oc pa pl pt pt_BR ro ru sl sv ta te tr uk vi zh_CN zh_HK zh_TW"
GETTEXT_PACKAGE=nemo-share
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE, "$GETTEXT_PACKAGE", [gettext package name])
AM_GLIB_GNU_GETTEXT
AM_GLIB_DEFINE_LOCALEDIR(NEMO_SHARE_LOCALEDIR)

# AM_GNOME_GETTEXT above substs $DATADIRNAME
# this is the directory where the *.{mo,gmo} files are installed
gnomelocaledir='${prefix}/${DATADIRNAME}/locale'
AC_SUBST(gnomelocaledir)


dnl ========================================================

AC_CONFIG_FILES([
  Makefile 
  src/Makefile
  interfaces/Makefile
  po/Makefile.in
])
AC_OUTPUT

